# pdf_parsing

./: .gitignore  README.md  _write_html_report.py  create_missing_pdfs.py  extract_11.py  extract_all.py  extract_ocr.py  parse_results.py  pyproject.toml  register_synthetic_pdfs.py  requirements.txt  test_easyocr.py  update_report.py  watch_and_update.py
configs/: logging.yaml  parsers.yaml  pipeline.yaml  scoring.yaml  sources.yaml
data/catalog/: pdf_catalog.jsonl
docs/: EXECUTION_GUIDE.md  MASTER_PDF_RAG_GUIDE.md  PDF_INSIGHTS_AND_BEST_PRACTICES.md  PDF_LIBRARIES_OVERVIEW.md  PDF_LIBRARIES_REALWORLD_USAGE.md  PDF_TYPES_EXPLAINED.md  PIPELINE_EXECUTION_STORY.md
logs/: example_run_sample_logs.md
src/pdf_research_pipeline/: __init__.py  cli.py  config.py  logging_utils.py  provenance.py
src/pdf_research_pipeline/benchmark/: __init__.py  comparator.py  html_report.py  openai_agent.py  pdf_analyzer.py  scorer.py  selector.py
src/pdf_research_pipeline/downloader/: __init__.py  arxiv.py  base.py  data_gov.py  funsd.py  internet_archive.py  loc_gov.py  placeholder.py
src/pdf_research_pipeline/parsers/: __init__.py  base.py  easyocr_parser.py  marker_parser.py  nougat_parser.py  ocrmypdf_parser.py  pdfplumber_parser.py  pdftext_parser.py  pymupdf_parser.py  pypdf_parser.py  pypdfium2_parser.py  table_extractors.py  tesseract_parser.py  unstructured_parser.py
src/pdf_research_pipeline/utils/: __init__.py  files.py  hashing.py  metadata.py  timers.py
src/pdf_research_pipeline/verification/: __init__.py  diffing.py  validators.py
tests/: test_downloaders.py  test_parsers.py  test_pipeline_e2e.py  test_verification.py
